bug:fixed> onclick body collapse

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -112,34 +112,3 @@ body {
     @apply bg-background text-foreground;
   }
 }
-
-.embla {
-  overflow: hidden;
-}
-.embla__container {
-  display: flex;
-}
-.embla__slide {
-  flex: 0 0 100%;
-  min-width: 0;
-  /* margin-right: 1px; */
-}
-
-/* Toggle styles  */
-.menu-enter {
-  opacity: 0;
-}
-
-.menu-enter-active {
-  opacity: 1;
-  transition: opacity 300ms;
-}
-
-.menu-exit {
-  opacity: 1;
-}
-
-.menu-exit-active {
-  opacity: 0;
-  transition: opacity 300ms;
-}
